<resources>
    <string name="app_name">Job</string>
    <string name="your_skills_location_and_preference_to_build">your skills, location and preference to build</string>
    <string name="we_help_you_to_find_your_dream_job_according_to">we help you to find your dream job according to</string>
    <string name="find_your_dream_job">Find Your Dream Job</string>
    <string name="your_career">your career</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="stable_yourself">Stable Yourself</string>
    <string name="with_your_ability">With Your Ability</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_a_guest">continue as a guest</string>
    <string name="fill_the_details_to_create_new_account">fill the details to create new account</string>
    <string name="welcome_to_job_hub">Welcome To Job-Hub!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account_login">Already have account? login!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="fill_the_details_to_login_to_your_account">fill the details to login to your account</string>
    <string name="fill_the_details_to_change_your_password">fill the details to change your password</string>
    <string name="fill_the_details_to_delete_to_your_account">fill the details to delete to your account</string>
    <string name="dont_have_account_register">dont have account? register!</string>
    <string name="complete_register">Complete Register</string>
    <string name="personaldetails">PersonalDetails</string>
    <string name="phone_number">Phone Number</string>
    <string name="professional_skills">Professional Skills</string>
    <string name="first_skill">First Skill</string>
    <string name="second_skill">Second Skill</string>
    <string name="third_skill">Third Skill</string>
    <string name="fourth_skill">Fourth Skill</string>
    <string name="fifth_skill">Fifth Skill</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="tap_to_change_password">Tap to Change Password</string>
    <string name="tap_to_update_user">Tap To Update User</string>
    <string name="update_account">Update Account</string>
    <string name="image">image</string>
    <string name="location">Location</string>
    <string name="go_to_jobs">Go To Jobs</string>
    <string name="find_apply"><![CDATA[Find & Apply]]></string>
    <string name="popular_jobs">Popular Jobs</string>
    <string name="view_all">View All</string>
    <string name="jobs">Jobs</string>
    <string name="apply_now">Apply Now</string>
    <string name="click_here_to_search_for_jobs">click here to search for jobs</string>
    <string name="search_for_a_job">Search For A Job</string>
    <string name="search">Search,</string>
    <string name="recently_posted">Recently Posted</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="skills">Skills</string>
    <string name="delete_account">Delete Account</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="create_job">Create Job</string>
    <string name="enter_job_title">Enter Job Title</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="enter_jop_description">Enter Jop Description</string>
    <string name="jop_description">Jop Description</string>
    <string name="job_location">Job Location</string>
    <string name="enter_jop_location">Enter Jop Location</string>
    <string name="jop_salary">Jop Salary</string>
    <string name="enter_jop_salary">Enter Jop Salary</string>
    <string name="contract_period">Contract Period</string>
    <string name="enter_contract_period">Enter Contract Period</string>
    <string name="work_hours">Work Hours</string>
    <string name="enter_work_hours">Enter Work hours</string>
    <string name="update_job">Update Job</string>
</resources>